# ccskill_manager

./: LICENSE  README.md  __init__.py  main.py  pyproject.toml
src/cc_skills/: __init__.py
